# trt-ai-fixer

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  roadmap.md  why_trt_fails.md
examples/: demo_run.md
examples/models/: combined_einsum_gelu.onnx  combined_einsum_gelu.py  combined_einsum_gelu_rewritten.onnx  einsum_complex.onnx  einsum_fail.onnx  einsum_fail_rewritten.onnx  einsum_fail_trt.onnx  gelu_fail.onnx  gelu_fail_rewritten.onnx  generate_einsum_complex.py  generate_einsum_fail.py  generate_gelu_fail.py  generate_layernorm_fail.py  layernorm_fail.onnx
examples/outputs/: einsum_summary.txt
tests/: test_detector.py  test_einsum_rewrite.py  test_gelu_detection.py  test_layernorm_detection.py  test_pnnx_rewrite.py  test_scanner.py
trt_fixer/: cli.py
trt_fixer/config/: rules.yaml  trt_versions.json
trt_fixer/detector/: classify_node.py  gelu_patterns.py  support_db.py  trt_dryrun.py
trt_fixer/explain/: failure_reasoner.py  trt_error_parser.py
trt_fixer/plugins/: MakeLists.txt.j2  plugin.cpp.j2  plugin.h.j2
trt_fixer/prevent/: einsum_patterns.py  einsum_rewrite.py  einsum_rules.py  gelu_rewrite.py  gelu_rules.py  precision_fixes.py  rewrite_engine.py  rewrite_plan.py
trt_fixer/scanner/: graph_repr.py  onnx_scanner.py  shape_infer.py
trt_fixer/suggest/: fix_ranker.py  plugin_advisor.py
trt_fixer/utils/: io.py  logger.py  validation.py
